updated cstacks script and notebooks

--- a/CRAGIG_run1/Notebooks/Resolving loci number mismatch between stacks output and catalog file.ipynb
+++ b/CRAGIG_run1/Notebooks/Resolving loci number mismatch between stacks output and catalog file.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -102,12 +102,131 @@
    },
    "outputs": [],
    "source": [
-    "!python easy_ctacks.py \\\n",
-    "-p 3 \\\n",
+    "!python easy_cstacks.py \\\n",
+    "-p 5 \\\n",
     "-b 100 \\\n",
-    "-s ../../../WorkingFolder/samples_for_cstacks.txt \\\n",
+    "-s ../../../WorkingFolder/samples_for_use_cstacks.txt \\\n",
     "-o ../../../WorkingFolder/Cstacks2_Take2 \\\n",
-    "-i ../../../WorkingFolder/Stacks_2\n"
+    "-i ../../../WorkingFolder/Stacks_2 \\\n",
+    "-g"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Second attempt at round2 ``cstacks``, bash script looks like this:\n",
+    "\n",
+    "```\n",
+    "This is what your cstacks shell looks like.\n",
+    "stacks cstacks -b 100  -g -s ../../../WorkingFolder/Stacks_2/Q324 -s ../../../WorkingFolder/Stacks_2/Q318 -s ../../../WorkingFolder/Stacks_2/Q326 -s ../../../WorkingFolder/Stacks_2/Q314 -s ../../../WorkingFolder/Stacks_2/Q316 -s ../../../WorkingFolder/Stacks_2/Q323 -s ../../../WorkingFolder/Stacks_2/Q325 -s ../../../WorkingFolder/Stacks_2/Q351 -s ../../../WorkingFolder/Stacks_2/Q352 -s ../../../WorkingFolder/Stacks_2/Q332 -s ../../../WorkingFolder/Stacks_2/Q339 -s ../../../WorkingFolder/Stacks_2/Q334 -s ../../../WorkingFolder/Stacks_2/Q347 -s ../../../WorkingFolder/Stacks_2/Q356 -s ../../../WorkingFolder/Stacks_2/Q330 -s ../../../WorkingFolder/Stacks_2/Q355 -s ../../../WorkingFolder/Stacks_2/Q354 -s ../../../WorkingFolder/Stacks_2/FG009 -s ../../../WorkingFolder/Stacks_2/FG033 -s ../../../WorkingFolder/Stacks_2/FG002 -s ../../../WorkingFolder/Stacks_2/FG027 -s ../../../WorkingFolder/Stacks_2/FG021 -s ../../../WorkingFolder/Stacks_2/FG013 -s ../../../WorkingFolder/Stacks_2/FG001 -s ../../../WorkingFolder/Stacks_2/FG005 -s ../../../WorkingFolder/Stacks_2/FG014 -s ../../../WorkingFolder/Stacks_2/FG006 -s ../../../WorkingFolder/Stacks_2/FG101_A -s ../../../WorkingFolder/Stacks_2/FG102_A -s ../../../WorkingFolder/Stacks_2/FG100_B -s ../../../WorkingFolder/Stacks_2/FG106 -s ../../../WorkingFolder/Stacks_2/FG107 -s ../../../WorkingFolder/Stacks_2/FG109 -s ../../../WorkingFolder/Stacks_2/FG104_A -s ../../../WorkingFolder/Stacks_2/FG111 -s ../../../WorkingFolder/Stacks_2/FG108 -s ../../../WorkingFolder/Stacks_2/FG103_A -s ../../../WorkingFolder/Stacks_2/FG210 -s ../../../WorkingFolder/Stacks_2/FG205 -s ../../../WorkingFolder/Stacks_2/FG211 -s ../../../WorkingFolder/Stacks_2/FG212 -s ../../../WorkingFolder/Stacks_2/FG201 -s ../../../WorkingFolder/Stacks_2/FG209 -s ../../../WorkingFolder/Stacks_2/FG206 -s ../../../WorkingFolder/Stacks_2/FG204 -s ../../../WorkingFolder/Stacks_2/FG202 -s ../../../WorkingFolder/Stacks_2/FG203 -o ../../../WorkingFolder/Cstacks2_Take2 -p 3 \n",
+    "Run this shell script?\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Verify...\n",
+    "- sample files are coming out of Stacks_2, which means the ``pstacks`` output YES\n",
+    "- ``-g`` flag without ``-n`` flag YES\n",
+    "- other arguments the same: batch = 100 YES, num threads = 5 YES\n",
+    "\n",
+    "Ok, running!\n",
+    "\n",
+    "I can see that part of the output of the program is a line saying \"loci matched based on genomic location,\" and I just double-checked to see that that was the case previously. And it was. So this may not  be the problem after all... oh, and the other catch that I just remembered is that even if I somehow made the catalog with the wrong files, it still resulted in 27K loci, which means down the line the genepop files should never have more than 27K loci. May have to rerun ``sstacks`` and second round ``populations`` again in here, to see if I can find the problem.\n",
+    "\n",
+    "Output in terminal looked like:\n",
+    "\n",
+    "```\n",
+    "Run this shell script?YES\n",
+    "Running shell script.\n",
+    "Number of mismatches allowed between stacks: 1\n",
+    "Loci matched based on genomic location.\n",
+    "Constructing catalog from 47 samples.\n",
+    "Initializing new catalog...\n",
+    "  Parsing ../../../WorkingFolder/Stacks_2/Q324.tags.tsv\n",
+    "  Parsing ../../../WorkingFolder/Stacks_2/Q324.snps.tsv\n",
+    "  Parsing ../../../WorkingFolder/Stacks_2/Q324.alleles.tsv\n",
+    "Building an index of the catalog.\n",
+    "Processing sample ../../../WorkingFolder/Stacks_2/Q324 [2 of 47]\n",
+    "  Parsing ../../../WorkingFolder/Stacks_2/Q318.tags.tsv\n",
+    "  Parsing ../../../WorkingFolder/Stacks_2/Q318.snps.tsv\n",
+    "  Parsing ../../../WorkingFolder/Stacks_2/Q318.alleles.tsv\n",
+    "Searching for matches by genomic location...\n",
+    "Merging matches into catalog...\n",
+    "  0 loci matched more than one catalog locus and were excluded.\n",
+    "  Updating catalog index...\n",
+    "\n",
+    "```\n",
+    "...\n",
+    "```\n",
+    "Processing sample ../../../WorkingFolder/Stacks_2/FG202 [47 of 47]\n",
+    "  Parsing ../../../WorkingFolder/Stacks_2/FG203.tags.tsv\n",
+    "  Parsing ../../../WorkingFolder/Stacks_2/FG203.snps.tsv\n",
+    "  Parsing ../../../WorkingFolder/Stacks_2/FG203.alleles.tsv\n",
+    "Searching for matches by genomic location...\n",
+    "Merging matches into catalog...\n",
+    "  0 loci matched more than one catalog locus and were excluded.\n",
+    "  Updating catalog index...\n",
+    "Writing catalog to '../../../WorkingFolder/Cstacks2_Take2/... done.\n",
+    "\n",
+    "Running cstacks took \n",
+    "00:14:00.70\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Now count number of loci in new catalog file using the ``grep`` command."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/hgfs/SHARED_FOLDER/WorkingFolder/Cstacks2_Take2\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd /mnt/hgfs/SHARED_FOLDER/WorkingFolder/Cstacks2_Take2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "batch_100.catalog.tags.tsv:27460\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!grep --count --with-filename consensus batch_100.catalog.tags.tsv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bummer. That's the same number of loci as previously. \n",
+    "\n",
+    "**Hypothesis 2**\n",
+    "I made some small error between ``cstacks`` 2 and ``populations`` 2 that I might catch by rerunning.\n",
+    "\n",
+    "Going to rerun through ``populations`` and see! After that... I think I'll have to take a much deeper dive into ``Stacks`` to figure it out.\n",
+    "\n",
+    "## ``sstacks``\n",
+    "\n"
    ]
   }
  ],
