updated count genotypes in genepop file script

--- a/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
@@ -2568,6 +2568,10 @@
     "\n",
     "There must be some issue because my genepop file has more than my cleaned catalog made with my \"reference genome,\" so I'll need to go back and check to see where the error is. I've gone through my files and records, and chatted with everyone, and really can't figure it out. So I spent some time writing the scripts for the following steps and familiarizing myself with those steps, here below. I think the wisest next step is to rerun the pipeline, maybe even from the start. Yikes.\n",
     "\n",
+    "** 20170314**\n",
+    "\n",
+    "Issue resolved! It was my misunderstanding. I misunderstood how Genepop files work, and the haplotype vs. locus vs. snp vs. tag thing. Genepop files from ``populations`` output are SNPs, so when I count columns, I'm actually counting SNPs and not loci. \n",
+    "\n",
     "## Reformat Genepop file to transposed CSV\n",
     "\n",
     "I'm skipping a couple of the steps that most of our lab mates working on finfish use, so I'm jumping straight from ``populations`` round 2 to filter for missing values and then try to make a DAPC.\n",
@@ -2642,7 +2646,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
