added script for parsing haps file to tag GP, updated notebooks

--- a/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
@@ -2559,6 +2559,58 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that I've rewritten this script to be more specific (now that I understand how ``populations`` works better!) ... run count again:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/hgfs/SHARED_FOLDER/Git_repo/CRAGIG_run1/Scripts\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd /mnt/hgfs/SHARED_FOLDER/Git_repo/CRAGIG_run1/Scripts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your Genepop file has 7740 loci with 82265 SNPs.\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python count_snps_loci_genepop.py ../../../WorkingFolder/Stacks_2/batch_100.genepop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wow. That's an average of 10ish SNPs per tag. Yikes!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
@@ -2570,7 +2622,10 @@
     "\n",
     "** 20170314**\n",
     "\n",
-    "Issue resolved! It was my misunderstanding. I misunderstood how Genepop files work, and the haplotype vs. locus vs. snp vs. tag thing. Genepop files from ``populations`` output are SNPs, so when I count columns, I'm actually counting SNPs and not loci. \n",
+    "Issue resolved! It was my misunderstanding. I misunderstood how Genepop files work, and the haplotype vs. locus vs. snp vs. tag thing. Genepop files from ``populations`` output are SNPs, so when I count columns, I'm actually counting SNPs and not loci. So - one major thing to resolve is whether I want to analyze my data by SNP or by locus, and I think I want to do by locus, but conveniently I already moved forward with SNPs yesterday. So after the parts by SNPs, I'll work with by locus. That will involve writing a script to parse the ``populations`` haplotypes file into a tags Genepop instead of SNPSs, and then repeating much of the same steps through.\n",
+    "\n",
+    "\n",
+    "## Post-Stacks filtering & DAPC with SNPs Genepop\n",
     "\n",
     "## Reformat Genepop file to transposed CSV\n",
     "\n",
@@ -2643,12 +2698,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
+   },
+   "source": [
+    "## Tags Genepop Analysis\n",
+    "\n",
+    "**20170314**\n",
+    "\n",
+    "I went through and made a preliminary DAPC with my SNPs Genepop (output from ``populations``), and now I need to make a script that parses the haplotypes file into a tags Genepop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
