--- a/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
@@ -2559,7 +2559,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Now that I've rewritten this script to be more specific (now that I understand how ``populations`` works better!) ... run count again:"
    ]
@@ -2568,7 +2571,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2587,7 +2592,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2604,7 +2611,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Wow. That's an average of 10ish SNPs per tag. Yikes!"
    ]
@@ -2709,14 +2719,24 @@
     "\n",
     "**20170314**\n",
     "\n",
-    "I went through and made a preliminary DAPC with my SNPs Genepop (output from ``populations``), and now I need to make a script that parses the haplotypes file into a tags Genepop."
+    "I went through and made a preliminary DAPC with my SNPs Genepop (output from ``populations``), and now I need to make a script that parses the haplotypes file into a tags Genepop.\n",
+    "\n",
+    "**20170315**\n",
+    "\n",
+    "Made the script! Notebook [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/parse_haplotypesfile_to_tagsGenepop.ipynb), script [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/parse_hapfile_to_tagGenePop.py).\n",
+    "\n",
+    "For this run, the file's name is ``tagsGenepop_20170314.genepop``\n",
+    "\n",
+    "I was staring at it in my text editor and realized that my sequencing replicates are actually quite different, which is pretty disturbing. So, now I'm working to write an algorithm for quantify genotyping error. The error could be high because of contamination, or it could be high because of something inherent to how genetically variable shellfish are + sequencing depth and error, etc. So some next steps (suggested by Brent) are to test for contamination by seeing if samples that I extracted tissue from on the same day are more similar to each other. Something else would be to see if genotypes with more than two alleles happen within tags or randomly across tags. Within tags would suggest paralogous loci, across tags may be evidence of contamination."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
