--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2741,20 +2741,35 @@
     "\n",
     "1. make a scatter plot of incidince of multiple alleles at a single genotype within a locus, against number of SNPs at that locus - because I think the more SNPs there are, the more likely a  small sequencing error can result in a huge haplotype call error.\n",
     "\n",
-    "2. make a script to filter for minor allele frequency at the SNP, then recall haplotypes, then rebuild haplotypes file\n",
+    "2. look at number snps in catalogs file, see if matches patterns in haplotypes file re: number of alleles at a genotype\n",
     "\n",
-    "3. then make genepop\n",
+    "3. make a script to filter for minor allele frequency at the SNP, then recall haplotypes, then rebuild haplotypes file\n",
     "\n",
-    "4. then further analysis for comparison"
+    "4. then make genepop\n",
+    "\n",
+    "5. then further analysis for comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "### Num SNPs in haplotype versus frequency of individual genotypes with more than two alleles\n",
+    "\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/haplength_byinc_morethantwoalleles_20170316.png?raw=true)\n",
+    "\n",
+    "Correlation, R = .31, so not huge at all. Not what I expected! I'm going to take a closer look at the catalog SNPs files to try and understand better the number of alleles per genotype, and the mismatch in snp and haplotype genotyping error."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
