--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2741,13 +2741,7 @@
     "\n",
     "1. make a scatter plot of incidince of multiple alleles at a single genotype within a locus, against number of SNPs at that locus - because I think the more SNPs there are, the more likely a  small sequencing error can result in a huge haplotype call error.\n",
     "\n",
-    "2. look at number snps in catalogs file, see if matches patterns in haplotypes file re: number of alleles at a genotype\n",
-    "\n",
-    "3. make a script to filter for minor allele frequency at the SNP, then recall haplotypes, then rebuild haplotypes file\n",
-    "\n",
-    "4. then make genepop\n",
-    "\n",
-    "5. then further analysis for comparison"
+    "2. look at number snps in catalogs file, see if matches patterns in haplotypes file re: number of alleles at a genotype\n"
    ]
   },
   {
@@ -2766,13 +2760,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "**20170317**\n",
+    "\n",
+    "I wanted to see whether the number of genotypes at the SNP level with more than two alleles was similar to that of the haplotype level, but I'm finding it pretty hard to get that SNP data out of the individual .snps, .tags, and .alleles files. \n",
+    "\n",
+    "I was also thinking that if the issue is that a small amount of sequencing error can lead to a huge genotyping error, then I should probably filter for some threshold, like a haplotype can only be kept if it exists in at least two individuals. For individuals with three alleles at a single genotype, I'd be curious to know the frequency of the minor allele. That would help me inform how to best filter haplotypes. \n",
+    "\n",
+    "So the next step is to explore the frequency of these \"additional\" haplotypes. If they're pretty much singletons, then made I wouldn't feel bad about excluding them (inferring that they're sequencing errors)"
+   ]
   }
  ],
  "metadata": {
