added notebook explore maf for my very mutliallelic data

--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2761,19 +2761,40 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Number of individual genotypes with different numbers of alleles\n",
+    "\n",
+    "**20170317**\n",
+    "\n",
+    "* Percent of genotypes with missing values: 13.12%\n",
+    "* Percent of genotypes with diploid genotypes: 76.28%\n",
+    "* Percent of genotypes with polyploid genotypes: 10.59%\n",
+    "    \n",
+    "And, histogram of number of additional alleles (additional to the two in a diploid genotype):\n",
+    "\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/hist_numalleles_indgen_haps_20170317.png?raw=true)\n",
+    "\n",
+    "Notebook [here](http://localhost:8888/notebooks/Git_repo/CRAGIG_run1/Notebooks/data_processing_notebooks/Plot_incidence_genotypes_morethantwoalleles_from_haplotypesfile.ipynb).\n",
+    "\n",
+    "It would also be nice to know what the average allele frequency is of these additional alleles. If it tends to be below a certain threshold, maybe we can convince ourselves that it's mostly sequencing error and worth throwing out. How to get that information though...\n",
+    "\n",
+    "I want to see whether the number of genotypes at the SNP level with more than two alleles was similar to that of the haplotype level, but I'm finding it pretty hard to get that SNP data out of the individual .snps, .tags, and .alleles files. \n",
+    "\n",
+    "I was also thinking that if the issue is that a small amount of sequencing error can lead to a huge genotyping error, then I should probably filter for some threshold, like a haplotype can only be kept if it exists in at least two individuals. For individuals with three alleles at a single genotype, I'd be curious to know the frequency of the minor allele. That would help me inform how to best filter haplotypes. \n",
+    "\n",
+    "I think it's worth delving into the individual .alleles files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
    },
    "source": [
-    "**20170317**\n",
-    "\n",
-    "I wanted to see whether the number of genotypes at the SNP level with more than two alleles was similar to that of the haplotype level, but I'm finding it pretty hard to get that SNP data out of the individual .snps, .tags, and .alleles files. \n",
-    "\n",
-    "I was also thinking that if the issue is that a small amount of sequencing error can lead to a huge genotyping error, then I should probably filter for some threshold, like a haplotype can only be kept if it exists in at least two individuals. For individuals with three alleles at a single genotype, I'd be curious to know the frequency of the minor allele. That would help me inform how to best filter haplotypes. \n",
-    "\n",
-    "So the next step is to explore the frequency of these \"additional\" haplotypes. If they're pretty much singletons, then made I wouldn't feel bad about excluding them (inferring that they're sequencing errors)"
+    "\n"
    ]
   }
  ],
