--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/Plot_incidence_genotypes_morethantwoalleles_from_haplotypesfile.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/Plot_incidence_genotypes_morethantwoalleles_from_haplotypesfile.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -44,8 +44,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['5', '6', '13', '16', '20', '22', '27', '28', '31', '35', '49', '50', '57', '62', '63', '71', '75', '77', '79']\n",
-      "[0, 0, 1, 0, 1, 0, 5, 0, 0, 0, 0, 1, 5, 6, 1, 0, 1, 4, 0]\n"
+      "Percent of genotypes with missing values: 13.12%\n",
+      "Percent of genotypes with diploid genotypes: 76.28%\n",
+      "Percent of genotypes with polyploid genotypes: 10.59%\n"
      ]
     }
    ],
@@ -67,6 +68,8 @@
     "hap_lengths = []\n",
     "num_alleles_list = []\n",
     "\n",
+    "missvals_count = 0 # initiate counter for genotypes with missing data\n",
+    "dip_count = 0 # inidiate counter for diploid genotypes\n",
     "for i in range(0,len(restlines)):\n",
     "    line = restlines[i]\n",
     "    linelist = line.strip().split()\n",
@@ -76,8 +79,11 @@
     "        splitgen = genotype.split(\"/\")\n",
     "        hap_length = len(splitgen[0])\n",
     "        tag_hap_lengths.append(hap_length)\n",
-    "        \n",
-    "        if len(splitgen) > 2:\n",
+    "        if splitgen[0] == \"-\":\n",
+    "            missvals_count += 1\n",
+    "        elif len(splitgen) == 2:\n",
+    "            dip_count += 1\n",
+    "        elif len(splitgen) > 2:\n",
     "            oldcount = inc_list[i]\n",
     "            newcount = oldcount + 1\n",
     "            inc_list[i] = newcount\n",
@@ -85,13 +91,16 @@
     "            num_alleles_list.append(num_alleles)\n",
     "    hap_length = max(tag_hap_lengths)\n",
     "    hap_lengths.append(hap_length)\n",
+    "    \n",
+    "total_gens = len(num_alleles_list) + missvals_count + dip_count\n",
     "\n",
-    "# check on lists w print\n",
-    "print locus_list[0:19]\n",
-    "print inc_list[0:19]\n",
+    "perc_miss = float(missvals_count)/float(total_gens)*100\n",
+    "perc_dip = float(dip_count)/float(total_gens)*100\n",
+    "perc_poly = float(len(num_alleles_list))/float(total_gens)*100\n",
     "\n",
-    "\n",
-    "\n"
+    "print \"Percent of genotypes with missing values: \" + str(perc_miss)[0:5] + \"%\"\n",
+    "print \"Percent of genotypes with diploid genotypes: \" + str(perc_dip)[0:5] + \"%\"\n",
+    "print \"Percent of genotypes with polyploid genotypes: \" + str(perc_poly)[0:5] + \"%\""
    ]
   },
   {
@@ -115,6 +124,15 @@
     "# check hap lengths list\n",
     "print hap_lengths[0:19]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
